syntax = "proto3";

option java_package = "enchantedtowers.common.utils.proto.responses";
option java_multiple_files = true;

package response_models;

// responses
import "common/spell-description.proto";
import "responses/common/server-error.proto";

message SpellFinishResponse {
  common.SpellDescription spellDescription = 1;
  response_models.ServerError error = 2;
};
